--- a/META.yml
+++ b/META.yml
@@ -27,7 +27,7 @@ provides:
     version: '1.005001'
 recommends:
   Data::DPath: '0'
-  Moose: '2.000'
+  Moo: '1.000008'
   Path::Tiny: '0.058'
   Test::Differences: '0'
   Test::More: '0.99'
@@ -38,7 +38,7 @@ requires:
   Dist::Zilla::Tester: '0'
   Dist::Zilla::Util: '0'
   Module::Runtime: '0'
-  Moose: '0'
+  Moo: '0'
   Path::Tiny: '0.050'
   Sub::Exporter: '0'
   Test::DZil: '0'
