--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
   perl: '5.006'
-dynamic_config: 0
+dynamic_config: 1
 generated_by: 'Dist::Zilla version 5.034, CPAN::Meta::Converter version 2.150001'
 license: perl
 meta-spec:
@@ -552,6 +552,10 @@ x_Dist_Zilla:
           type: requires
       name: DevelopRequires
       version: '5.034'
+    -
+      class: Dist::Zilla::Plugin::DynamicPrereqs
+      name: DynamicPrereqs
+      version: '0.010'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
