--- a/META.yml
+++ b/META.yml
@@ -7,11 +7,11 @@ build_requires:
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
   Test::More: '0.96'
-  perl: '5.008'
+  perl: '5.006'
 configure_requires:
   ExtUtils::MakeMaker: '0'
-  perl: '5.008'
-dynamic_config: 0
+  perl: '5.006'
+dynamic_config: 1
 generated_by: 'Dist::Zilla version 5.034, CPAN::Meta::Converter version 2.150001'
 license: perl
 meta-spec:
@@ -21,10 +21,10 @@ name: Dist-Zilla-Util-Test-KENTNL
 provides:
   Dist::Zilla::Util::Test::KENTNL:
     file: lib/Dist/Zilla/Util/Test/KENTNL.pm
-    version: '1.005010'
+    version: '1.005011'
   Dist::Zilla::Util::Test::KENTNL::dztest:
     file: lib/Dist/Zilla/Util/Test/KENTNL/dztest.pm
-    version: '1.005010'
+    version: '1.005011'
 recommends:
   Moo: '1.000008'
   Path::Tiny: '0.058'
@@ -45,16 +45,15 @@ requires:
   Test::Fatal: '0'
   Test::More: '0.96'
   Try::Tiny: '0'
-  perl: '5.008'
+  perl: '5.006'
   recommended: '0'
   strict: '0'
-  utf8: '0'
   warnings: '0'
 resources:
   bugtracker: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL/issues
   homepage: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL
   repository: https://github.com/kentnl/Dist-Zilla-Util-Test-KENTNL.git
-version: '1.005010'
+version: '1.005011'
 x_BuiltWith:
   external_file: misc/built_with.json
 x_Dist_Zilla:
@@ -420,7 +419,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
           signed: 0
-          tag: 1.005010-source
+          tag: 1.005011-source
           tag_format: '%v-source'
           tag_message: v%v
           time_zone: local
@@ -474,7 +473,7 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
           signed: 0
-          tag: '1.005010'
+          tag: '1.005011'
           tag_format: '%v'
           tag_message: v%v
           time_zone: local
@@ -553,6 +552,10 @@ x_Dist_Zilla:
           type: requires
       name: DevelopRequires
       version: '5.034'
+    -
+      class: Dist::Zilla::Plugin::DynamicPrereqs
+      name: DynamicPrereqs
+      version: '0.010'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
