--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ configure_requires:
   ExtUtils::MakeMaker: '0'
   perl: '5.006'
 dynamic_config: 1
-generated_by: 'Dist::Zilla version 5.034, CPAN::Meta::Converter version 2.150001'
+generated_by: 'Dist::Zilla version 5.039, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -58,16 +58,16 @@ x_BuiltWith:
   external_file: misc/built_with.json
 x_Dist_Zilla:
   perl:
-    version: '5.021009'
+    version: '5.022000'
   plugins:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::KENTNL/MetaConfig'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Author::KENTNL/GithubMeta'
-      version: '0.48'
+      version: '0.54'
     -
       class: Dist::Zilla::Plugin::MetaProvides::Package
       config:
@@ -76,7 +76,7 @@ x_Dist_Zilla:
             -
               class: Dist::Zilla::Plugin::FinderCode
               name: '@Author::KENTNL/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
-              version: '5.034'
+              version: '5.039'
         Dist::Zilla::Role::MetaProvider::Provider:
           inherit_missing: '1'
           inherit_version: '1'
@@ -106,47 +106,48 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Git::Contributors
       config:
         Dist::Zilla::Plugin::Git::Contributors:
-          include_authors: '0'
-          include_releaser: '0'
+          include_authors: 0
+          include_releaser: 0
           order_by: name
-          paths: []
+          paths:
+            - .
       name: '@Author::KENTNL/Git::Contributors'
-      version: '0.011'
+      version: '0.014'
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       config:
         Dist::Zilla::Plugin::GatherDir:
           exclude_filename:
+            - LICENSE
             - README
             - README.mkdn
             - README.pod
-            - LICENSE
           exclude_match: []
-          follow_symlinks: '0'
-          include_dotfiles: '1'
+          follow_symlinks: 0
+          include_dotfiles: 1
           prefix: ''
           prune_directory: []
           root: .
         Dist::Zilla::Plugin::Git::GatherDir:
-          include_untracked: '0'
+          include_untracked: 0
       name: '@Author::KENTNL/Git::GatherDir'
-      version: '2.033'
+      version: '2.036'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::KENTNL/License'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::KENTNL/MetaJSON'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::KENTNL/MetaYAML'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::KENTNL/Manifest'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Author::KENTNL::TravisCI
       name: '@Author::KENTNL/Author::KENTNL::TravisCI'
@@ -154,19 +155,19 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::CopyFilesFromBuild
       name: '@Author::KENTNL/CopyXBuild'
-      version: '0.150250'
+      version: '0.151680'
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Author::KENTNL/MetaTests'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::KENTNL/PodCoverageTests'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::KENTNL/PodSyntaxTests'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Test::ReportPrereqs
       name: '@Author::KENTNL/Test::ReportPrereqs'
@@ -178,7 +179,7 @@ x_Dist_Zilla:
           filename: xt/release/kwalitee.t
           skiptest: []
       name: '@Author::KENTNL/Test::Kwalitee'
-      version: '2.11'
+      version: '2.12'
     -
       class: Dist::Zilla::Plugin::Test::EOL
       config:
@@ -190,15 +191,15 @@ x_Dist_Zilla:
             - ':TestFiles'
           trailing_whitespace: '1'
       name: '@Author::KENTNL/Test::EOL'
-      version: '0.17'
+      version: '0.18'
     -
       class: Dist::Zilla::Plugin::Test::MinimumVersion
       name: '@Author::KENTNL/Test::MinimumVersion'
-      version: '2.000006'
+      version: '2.000005'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: '@Author::KENTNL/Test::Compile::PerFile/AUTOVIV/:InstallModulesPM'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Test::Compile::PerFile
       config:
@@ -220,10 +221,17 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::KENTNL/ManifestSkip'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::RewriteVersion::Sanitized
       config:
+        Dist::Zilla::Plugin::RewriteVersion:
+          add_tarball_name: 0
+          finders:
+            - ':ExecFiles'
+            - ':InstallModules'
+          global: 0
+          skip_version_provider: 0
         Dist::Zilla::Role::Version::Sanitize:
           mantissa: '6'
           normal_form: numify
@@ -240,89 +248,89 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::EnsurePod5
               name: '@CorePrep/EnsurePod5'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Plugin::H1Nester
               name: '@CorePrep/H1Nester'
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Plugin::SingleEncoding
               name: -SingleEncoding
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Name
               name: Name
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Version
               name: Version
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Region
               name: prelude
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Generic
               name: SYNOPSIS
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Generic
               name: DESCRIPTION
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Generic
               name: OVERVIEW
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Collect
               name: METHODS
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Collect
               name: ATTRIBUTES
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Collect
               name: FILTER_METHODS
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Collect
               name: TERMINATOR_LIST_METHODS
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Collect
               name: MIRROR_LIST_METHODS
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Collect
               name: PRIVATE_ATTRIBUTES
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Collect
               name: PRIVATE_METHODS
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Leftovers
               name: Leftovers
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Region
               name: postlude
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Authors
               name: Authors
-              version: '4.011'
+              version: '4.012'
             -
               class: Pod::Weaver::Section::Legal
               name: Legal
-              version: '4.011'
+              version: '4.012'
       name: '@Author::KENTNL/PodWeaver'
       version: '4.006'
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::KENTNL/AutoPrereqs'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -330,7 +338,7 @@ x_Dist_Zilla:
           phase: develop
           type: suggests
       name: '@Author::KENTNL/BundleDevelSuggests'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Prereqs::AuthorDeps
       name: '@Author::KENTNL/Prereqs::AuthorDeps'
@@ -349,38 +357,41 @@ x_Dist_Zilla:
         Dist::Zilla::Role::TestRunner:
           default_jobs: '10'
       name: '@Author::KENTNL/MakeMaker'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes
       name: '@Author::KENTNL/Author::KENTNL::RecommendFixes'
-      version: '0.004002'
+      version: '0.005001'
     -
       class: Dist::Zilla::Plugin::Readme::Brief
       name: '@Author::KENTNL/ShippedReadme'
       version: '0.002005'
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
+      config:
+        Dist::Zilla::Role::FileWatcher:
+          version: '0.006'
       name: '@Author::KENTNL/ReadmeAnyFromPod'
       version: '0.150250'
     -
       class: Dist::Zilla::Plugin::Test::CPAN::Changes
       name: '@Author::KENTNL/Test::CPAN::Changes'
-      version: '0.009'
+      version: '0.008'
     -
       class: Dist::Zilla::Plugin::RunExtraTests
       config:
         Dist::Zilla::Role::TestRunner:
           default_jobs: '10'
       name: '@Author::KENTNL/RunExtraTests'
-      version: '0.026'
+      version: '0.028'
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::KENTNL/TestRelease'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::KENTNL/ConfirmRelease'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Git::Check
       config:
@@ -388,71 +399,82 @@ x_Dist_Zilla:
           untracked_files: die
         Dist::Zilla::Role::Git::DirtyFiles:
           allow_dirty:
-            - dist.ini
             - Changes
+            - dist.ini
           allow_dirty_match: []
           changelog: Changes
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/Git::Check'
-      version: '2.033'
+      version: '2.036'
     -
       class: Dist::Zilla::Plugin::Git::Commit
       config:
         Dist::Zilla::Plugin::Git::Commit:
           add_files_in: []
           commit_msg: v%v%n%n%c
-          time_zone: local
         Dist::Zilla::Role::Git::DirtyFiles:
           allow_dirty:
-            - dist.ini
             - Changes
+            - dist.ini
           allow_dirty_match: []
           changelog: Changes
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
+        Dist::Zilla::Role::Git::StringFormatter:
+          time_zone: local
       name: '@Author::KENTNL/commit_dirty_files'
-      version: '2.033'
+      version: '2.036'
     -
       class: Dist::Zilla::Plugin::Git::Tag
       config:
         Dist::Zilla::Plugin::Git::Tag:
           branch: ~
+          changelog: Changes
           signed: 0
           tag: 1.005013-source
           tag_format: '%v-source'
           tag_message: v%v
-          time_zone: local
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
+        Dist::Zilla::Role::Git::StringFormatter:
+          time_zone: local
       name: '@Author::KENTNL/tag_master'
-      version: '2.033'
+      version: '2.036'
     -
       class: Dist::Zilla::Plugin::Git::NextRelease
       name: '@Author::KENTNL/Git::NextRelease'
       version: '0.004000'
     -
       class: Dist::Zilla::Plugin::BumpVersionAfterRelease
+      config:
+        Dist::Zilla::Plugin::BumpVersionAfterRelease:
+          finders:
+            - ':ExecFiles'
+            - ':InstallModules'
+          global: 0
+          munge_makefile_pl: 1
       name: '@Author::KENTNL/BumpVersionAfterRelease'
-      version: '0.009'
+      version: '0.012'
     -
       class: Dist::Zilla::Plugin::Git::Commit
       config:
         Dist::Zilla::Plugin::Git::Commit:
           add_files_in: []
           commit_msg: v%v%n%n%c
-          time_zone: local
         Dist::Zilla::Role::Git::DirtyFiles:
           allow_dirty:
-            - dist.ini
             - Changes
+            - dist.ini
           allow_dirty_match:
             - (?^u:^lib/)
           changelog: Changes
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
+        Dist::Zilla::Role::Git::StringFormatter:
+          time_zone: local
       name: '@Author::KENTNL/commit_release_changes'
-      version: '2.033'
+      version: '2.036'
     -
       class: Dist::Zilla::Plugin::Git::CommitBuild
       config:
@@ -466,25 +488,27 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: '@Author::KENTNL/Git::CommitBuild'
-      version: '2.033'
+      version: '2.036'
     -
       class: Dist::Zilla::Plugin::Git::Tag
       config:
         Dist::Zilla::Plugin::Git::Tag:
           branch: releases
+          changelog: Changes
           signed: 0
           tag: '1.005013'
           tag_format: '%v'
           tag_message: v%v
-          time_zone: local
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
+        Dist::Zilla::Role::Git::StringFormatter:
+          time_zone: local
       name: '@Author::KENTNL/tag_release'
-      version: '2.033'
+      version: '2.036'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::KENTNL/UploadToCPAN'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Twitter
       name: '@Author::KENTNL/Twitter'
@@ -527,7 +551,7 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: '@Author::KENTNL/::Role::BundleDeps'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -535,7 +559,7 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -543,7 +567,7 @@ x_Dist_Zilla:
           phase: runtime
           type: recommends
       name: RuntimeRecommends
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -551,50 +575,58 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: DevelopRequires
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::DynamicPrereqs
       name: DynamicPrereqs
-      version: '0.010'
+      version: '0.016'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: '5.034'
+      version: '5.039'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ExtraTestFiles'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: '5.034'
+      version: '5.039'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':PerlExecFiles'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':AllFiles'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':NoFiles'
-      version: '5.034'
+      version: '5.039'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: '@Author::KENTNL/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
-      version: '5.034'
+      version: '5.039'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: '0'
-    version: '5.034'
+    version: '5.039'
 x_authority: cpan:KENTNL
