--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-Dist-Zilla-Util-Test-KENTNL*
-.build
+/.build
+/Dist-Zilla-Util-Test-KENTNL-*
+/tmp/
+/META.json
+/MYMETA.json
+/META.yml
+/MYMETA.yml
+/Makefile
+/Makefile.old
+/blib/
+/pm_to_blib
